# hermit

./: .gitignore  LICENSE  Makefile  rust-toolchain.toml
crates/: Cargo.toml
crates/epistemic/: Cargo.toml
crates/epistemic-smcdel/: Cargo.toml
crates/epistemic-smcdel/src/: lib.rs
crates/epistemic/src/: lib.rs
crates/hermit/: Cargo.toml
crates/hermit-attributes/: Cargo.toml
crates/hermit-attributes-lib/: Cargo.toml
crates/hermit-attributes-lib/src/: agent.rs  ensure.rs  forgets.rs  have.rs  lib.rs  user.rs
crates/hermit-attributes-lib/src/internal/: have.rs
crates/hermit-attributes-lib/src/user/: agent.rs  ensure.rs  forget.rs  have.rs
crates/hermit-attributes-lib/src/user/form/: mod.rs  parse.rs
crates/hermit-attributes/src/: agent.rs  have.rs  lib.rs
crates/hermit-core/: Cargo.toml
crates/hermit-core/src/: flow.rs  lib.rs  network.rs
crates/hermit-core/src/semantics/: flow.rs  mod.rs  network.rs
crates/hermit-core/src/syntax/: elab.rs  mod.rs  typed.rs  untyped.rs
crates/hermit-markers/: Cargo.toml
crates/hermit-markers/src/: lib.rs
crates/hermit-plugin/: Cargo.toml
crates/hermit-plugin/src/: analyse.rs  collect.rs  hermit.rs  info.rs  lib.rs  meta.rs  plugin.rs
crates/hermit-plugin/src/collect/: attr.rs  fun.rs  localflow.rs  mod.rs
crates/hermit-plugin/src/meta/: convert.rs  mod.rs
crates/hermit-syntax/: Cargo.toml
crates/hermit-syntax/src/: internal.rs  lib.rs
crates/hermit-syntax/src/attribute/: agent.rs  ensure.rs  forget.rs  have.rs  mod.rs
crates/hermit-syntax/src/lang/: mod.rs  parse.rs
crates/hermit/src/: lib.rs
crates/immutable-list/: Cargo.toml
crates/immutable-list/src/: lib.rs
crates/iter-unique-ord/: Cargo.toml
crates/iter-unique-ord/src/: lib.rs
crates/smcdel-ffi-bridge/: Cargo.toml  build.rs  smcdel-ffi-bridge.cabal  smcdel-ffi.cabal
crates/smcdel-ffi-bridge/rust/: lib.rs
crates/smcdel-ffi-bridge/src/: Lib.hs
crates/smcdel-ffi-bridge/src/SMCDEL/: FFI.hs
examples/password/: Cargo.toml
examples/password/src/: db.rs  lib.rs
proposal/: latexmkrc  main.bib  main.tex  usenix-2020-09.sty
slides/: beamerthemeauriga.sty  latexmkrc  main.bib  main.tex  preamble.tex
