[package]
name = "hermit-attributes-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
epistemic = { path = "../epistemic", features = ["serde"] }

paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
