[package]
name = "hermit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"

epistemic = { path = "../epistemic" }
epistemic-smcdel = { path = "../epistemic-smcdel" }
immutable-list = { path = "../immutable-list" }
iter-unique-ord = { path = "../iter-unique-ord" }

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
maplit = "1.0"

[features]
serde = ["dep:serde"]
