cabal-version:      3.0
name:               smcdel-ffi-bridge
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Eric Zhao
maintainer:         21zhaoe@protonmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

foreign-library smcdel-ffi-bridge
    type:             native-shared
    other-modules:    Lib
    build-depends:
        base ^>=4.17.2.1
        , smcdel >=1.3.0
        , aeson >=2.2.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
